# qtlibarchive

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/QtLibArchive/: Entry.h  QtLibArchive.h  Reader.h  ReaderEntry.h  ReaderIterator.h  Writer.h  WriterEntry.h
src/: Entry.cpp  QtLibArchive.cpp  Reader.cpp  ReaderEntry.cpp  ReaderIterator.cpp  Writer.cpp  WriterEntry.cpp
tests/: CMakeLists.txt
tests/BasicFileIoTest/: BasicFileIoTest.cpp
